--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <div class="container mt-5">
         <div class="container-fluid mt-5">
             <div class="d-flex flex-wrap justify-content-around align-items-center">
-           <img src="./images/Hersheys-Logo-PNG-Photos.png" class="rounded img-fluid w-25 m-2" alt="image">
-              <img src="./images/OIP.jpg" class="rounded img-fluid w-25 m-2" alt="...">
-              <img src="./images/R.jpg" class="rounded img-fluid w-25 m-2" alt="...">
+           <img src="Hersheys-Logo-PNG-Photos.png" class="rounded img-fluid w-25 m-2" alt="image">
+              <img src="OIP.jpg" class="rounded img-fluid w-25 m-2" alt="...">
+              <img src="R.jpg" class="rounded img-fluid w-25 m-2" alt="...">
             </div>
           </div>
           <hr>
