--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="https://rojakatuwal.github.io/HowSweetIsThis/">Html and CSS Project</a></li>
-                      <li><a class="dropdown-item" href="http://127.0.0.1:5500/see-n-say-storymaker/see-n-say-storymaker/index.html"> Html, CSS and JavaScript Project</a></li>
+                      <li><a class="dropdown-item" href="https://rojakatuwal.github.io/SeeandSayStoryMaker/"> Html, CSS and JavaScript Project</a></li>
                       <li><a class="dropdown-item" href="https://rojakatuwal.github.io/WhatTheFont/">Html and CSS Project</a></li>
                     </ul>
                 </li>   
