--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       My Projects
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="https://rojakatuwal.github.io/HowSweetIsThis/">Html and CSS Project</a></li>
+                      <li><a class="dropdown-item" href="httpsrojakatuwal.github.io/HowSweetIsThis/">Html and CSS Project</a></li>
                       <li><a class="dropdown-item" href="https://rojakatuwal.github.io/SeeandSayStoryMaker/"> Html, CSS and JavaScript Project</a></li>
                       <li><a class="dropdown-item" href="https://rojakatuwal.github.io/WhatTheFont/">Html and CSS Project</a></li>
                     </ul>
